--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
+<%= render 'shared/navbar' %>
 <div class="container">
-  <h1>Home</h1>
+  <div class="hero">
+    <h1>Hey, I'm Jennifer</h1>
+      <h2>Fullstack Web Developer</h2>
+      <%= link_to 'Contact', contact_path  %>
+  </div>
 </div>
