--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,7 +8,9 @@
   h2 {
     font-size: 35px;
   }
-  i {
-    text-align: right;
+  a {
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    padding: 2px 10px;
   }
 }
