added link to home on logo

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#projects</h1>
-<p>Find me in app/views/pages/projects.html.erb</p>
+<%= render 'shared/navbar' %>
+<div class="container">
+  <div class="hero">
+    <h1>Projects</h1>
+
+  </div>
+</div>
