--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,8 @@
 <div class="navbar">
   <div>
-    <%= image_tag 'pc_logo.png', class: 'logo' %>
+    <%= link_to root_path do %>
+      <%= image_tag 'pc_logo.png', class: 'logo' %>
+    <% end %>
   </div>
   <div class="nav-links">
     <%= link_to 'ABOUT', about_path %>
