--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<%= render 'shared/navbar' %>
+<div class="container">
+  <div class="hero">
+    <h1>Skills</h1>
+  </div>
+</div>
