changed about page to skills

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </div>
   <div class="nav-links">
-    <%= link_to 'ABOUT', about_path %>
+    <%= link_to 'SKILLS', skills_path %>
     <%= link_to 'PROJECTS', projects_path %>
     <%= link_to 'CONTACT', contact_path %>
   </div>
