added color scss page with theme colors

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,7 +9,7 @@
     font-size: 35px;
   }
   a {
-    border: 1px solid #ffffff;
+    border: 1px solid #FFFBFC;
     border-radius: 5px;
     padding: 2px 10px;
   }
