--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   background-color: #223649;
-  color: #ffffff;
+  color: #FFFBFC;
   font-family: Raleway;
   margin-top: 80px;
 }
