--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,7 +14,7 @@
   width: 100%;
   a {
     text-decoration: none;
-    color: #ffffff;
+    color: #FFFBFC;
     margin: 0 20px;
     font-size: 14px;
     letter-spacing: 3px;
