--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <%= render 'shared/navbar' %>
 <div class="container">
   <div class="hero">
-    <h1>Hey, I'm Jennifer</h1>
+    <h1 class="pink">Hello!</h1>
+    <h1> I'm Jennifer</h1>
       <h2>Fullstack Web Developer</h2>
       <%= link_to 'Contact', contact_path  %>
   </div>
