--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,8 +9,8 @@ body {
 }
 a {
   text-decoration: none;
-  color: #cbdded;
+  color: #FFFBFC;
   &:hover {
-    opacity: 0.6;
+    opacity: 0.5;
   }
 }
