--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="hero">
     <h1 class="pink">Hello!</h1>
+    <div class="home-photo"></div>
     <h1> I'm Jennifer</h1>
       <h2>Fullstack Web Developer</h2>
       <%= link_to 'Contact', contact_path  %>
