removed image, changed some content on home page and added link to github

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,6 @@
 .hero {
-  text-align: center;
+  text-align: left;
+  margin: 30px 70px;
   .pink {
     color: #EB5160;
   }
@@ -11,7 +12,8 @@
   h2 {
     font-size: 35px;
   }
-  a {
+  .contact-link {
+    margin-left: 585px;
     border: 1px solid #FFFBFC;
     border-radius: 5px;
     padding: 2px 10px;
@@ -20,14 +22,5 @@
       border: 1px solid #EB5160;
       opacity: 1;
     }
-  }
-  .home-photo {
-    background: url(Jennifer.jpg) 50% 20% no-repeat;
-    width: 300px;
-    height: 300px;
-    align-self: center;
-    border-radius: 50%;
-    border: 1px solid #03B5AA;
-    box-shadow: 5px 5px 9px -5px rgba(0,0,0,0.75);
   }
 }
