--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,8 @@
 <div class="container">
   <div class="hero">
     <h1 class="pink">Hello!</h1>
-    <div class="home-photo"></div>
-    <h1> I'm Jennifer</h1>
-      <h2>Fullstack Web Developer</h2>
-      <%= link_to 'Contact', contact_path  %>
+    <h1> I'm <a href="https://github.com/jenn1ferl0uise" target="_blank">Jennifer.</a></h1>
+      <h2>Recently graduated Full-stack Developer</h2>
+      <%= link_to 'Contact', contact_path, class: 'contact-link'  %>
   </div>
 </div>
