added 'me to contact me

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,6 @@
     <h1 class="pink">Hello!</h1>
     <h1> I'm <a href="https://github.com/jenn1ferl0uise" target="_blank">Jennifer.</a></h1>
       <h2>Recently graduated Full-stack Developer</h2>
-      <%= link_to 'Contact', contact_path, class: 'contact-link'  %>
+      <%= link_to 'Contact Me', contact_path, class: 'contact-link'  %>
   </div>
 </div>
